# fitctrl

./: AGENTS.md  LICENSE  README.md  justfile  pyproject.toml  scan.py
.github/workflows/: ci.yml
src/fitctrl/: __init__.py  cli.py  commands.py  controller.py  core.py  display.py
tests/: __init__.py
tests/integration/: test_integration.py
tests/unit/: test_basic.py
