[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fitctrl"
version = "0.1.0"
description = "CLI and REPL interface for controlling FTMS-compatible fitness equipment"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "Sam Grimee"},
]
dependencies = [
    "pyftms>=0.4.15",           # Official PyPI package for FTMS protocol
    "prompt_toolkit>=3.0.43",   # REPL with auto-completion, key bindings
    "rich>=13.7.0",             # Colored output, tables, live display
]

[project.scripts]
fitctrl = "fitctrl.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
]

[tool.pytest.ini_options]
markers = [
    "integration: marks tests that require hardware/device access",
]

[tool.mypy]
python_version = "3.12"
# Strict typing for better code quality
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true
# Allow some flexibility for gradual adoption
warn_return_any = false
warn_unused_configs = true

[[tool.mypy.overrides]]
module = [
    "pyftms.*",
    "prompt_toolkit.*",
    "rich.*",
    "bleak.*",
]
ignore_missing_imports = true

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "mypy>=1.8.0",
    "ruff>=0.2.0",
]
